--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Formulier - Applicatie Naam</title>
+    <title>Contact Formulier - Portofolio van Tim Bosma</title>
     <link rel="stylesheet" href="styles.css">
     <script>
         // Formuliervalidatie toevoegen
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Applicatie Naam. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 portofolio.</p>
     </footer>
 </body>
 </html>
