--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom bij onze applicatie</title>
+    <title>Portofolio van Tim Bosma</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welkom bij onze applicatie</h1>
+        <h1>Welkom bij deze portofolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li> <!-- Link terug naar Home -->
@@ -20,15 +20,16 @@
 
     <main>
         <section>
-            <h2>Welkom bij onze applicatie</h2>
+            <h2>Welkom bij de portofolio van tim bosma</h2>
             <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet sagittis risus. Nullam at leo nec mauris facilisis tristique vel eu metus.</p>
+                <p>Ik ben Tim Bosma, een student 'softwaredevelopment' aan het techniek college rotterdam. 
+                    waar ik eerder ook de diploma heb gehaald voor 'Medewerker ICT Support</p>
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Applicatie Naam. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 portofolio.</p>
     </footer>
 </body>
 </html>
