--- a/projecten.html
+++ b/projecten.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onze Projecten - Applicatie Naam</title>
+    <title>Mijn Projecten - Portofolio van Tim Bosma</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Onze Projecten</h1>
+        <h1>Mijn Projecten</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
 
     <main>
         <section>
-            <h2>Onze Projecten</h2>
+            <h2>Mijn Projecten</h2>
             <article>
                 <!-- Lijst van projecten -->
             </article>
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Applicatie Naam. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 portofolio.</p>
     </footer>
 </body>
 </html>
