--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,12 @@
+<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Formulier - Portofolio van Tim Bosma</title>
+    <meta name="description" content="Neem contact op met Tim Bosma via het contactformulier.">
     <link rel="stylesheet" href="styles.css">
-    <script>
-        // Formuliervalidatie toevoegen
-        function validateForm() {
-            var name = document.getElementById("name").value;
-            var email = document.getElementById("email").value;
-            var message = document.getElementById("message").value;
-
-            if (name == "" || email == "" || message == "") {
-                alert("Alle velden moeten worden ingevuld");
-                return false;
-            }
-            return true;
-        }
-    </script>
 </head>
 <body>
     <header>
