--- a/projecten.html
+++ b/projecten.html
@@ -1,9 +1,11 @@
+<!-- projecten.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mijn Projecten - Portofolio van Tim Bosma</title>
+    <meta name="description" content="Bekijk de projecten waaraan Tim Bosma heeft gewerkt.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +24,13 @@
         <section>
             <h2>Mijn Projecten</h2>
             <article>
-                <!-- Lijst van projecten -->
+                <ul>
+                    <li><a href="https://github.com/TimBosma/Portofolio">Portofolio</a></li>
+                    <li><a href="https://github.com/TimBosma/Project-Ouderavond-SOD1A">Project Ouderavond SOD1A</a></li>
+                    <li><a href="https://github.com/TimBosma/P2-PHP">P2 PHP</a></li>
+                    <li><a href="https://github.com/TimBosma/p2-Space-defender">P2 Space Defender</a></li>
+                    <li><a href="https://github.com/TimBosma/p1-javascript">P1 JavaScript</a></li>
+                </ul>
             </article>
         </section>
     </main>
