--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio van Tim Bosma</title>
+    <title>Portofolio van Tim Bosma - Home</title>
+    <meta name="description" content="Welkom bij de portofolio van Tim Bosma. Hier vindt u informatie over mijn werkervaring, opleiding en projecten.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
         <h1>Welkom bij deze portofolio</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- Link terug naar Home -->
+                <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="projecten.html">Projecten</a></li>
             </ul>
@@ -20,10 +22,9 @@
 
     <main>
         <section>
-            <h2>Welkom bij de portofolio van tim bosma</h2>
+            <h2>Welkom bij de portofolio van Tim Bosma</h2>
             <article>
-                <p>Ik ben Tim Bosma, een student 'softwaredevelopment' aan het techniek college rotterdam. 
-                    waar ik eerder ook de diploma heb gehaald voor 'Medewerker ICT Support</p>
+                <p>Ik ben Tim Bosma, een student 'softwaredevelopment' aan het Techniek College Rotterdam, waar ik eerder ook het diploma heb gehaald voor 'Medewerker ICT Support'.</p>
             </article>
         </section>
     </main>
