--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
 
     <main>
         <section>
-            <h2>Contacteer Ons</h2>
+            <h2>Contacteer mij als u vragen heeft!</h2>
             <article>
-                <form onsubmit="return validateForm()">
+                <form action="mailto:voorbeeld@email.com" method="post">
                     <label for="name">Naam:</label>
                     <input type="text" id="name" name="name" required><br><br>
                     <label for="email">E-mail:</label>
