--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
     <main>
         <section>
-            <h2>Welkom bij de portofolio van Tim Bosma</h2>
+            <h2>Over mij</h2>
             <article>
-                <p>Ik ben Tim Bosma, een student 'softwaredevelopment' aan het Techniek College Rotterdam, waar ik eerder ook het diploma heb gehaald voor 'Medewerker ICT Support'.</p>
+                <p>Mijn naam is Tim Bosma en ik studeer softwareontwikkeling aan het Techniek College Rotterdam. Eerder heb ik mijn diploma behaald voor 'Medewerker ICT Support'.</p>
+                <p>Mijn vaardigheden omvatten HTML, CSS, Java en PHP.</p>
             </article>
         </section>
     </main>
