--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Formulier - Portofolio van Tim Bosma</title>
+    <title>Contact Formulier - Portfolio van Tim Bosma</title>
     <meta name="description" content="Neem contact op met Tim Bosma via het contactformulier.">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,8 +20,8 @@
     </header>
 
     <main>
-        <section>
-            <h2>Contacteer mij als u vragen heeft!</h2>
+        <section id="contact">
+            <h2>Contacteer mij</h2>
             <article>
                 <form action="mailto:voorbeeld@email.com" method="post">
                     <label for="name">Naam:</label>
@@ -38,7 +37,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 portofolio.</p>
+        <p>&copy; 2024 Tim Bosma Portfolio.</p>
     </footer>
 </body>
 </html>
