--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio van Tim Bosma - Home</title>
-    <meta name="description" content="Welkom bij de portofolio van Tim Bosma. Hier vindt u informatie over mijn werkervaring, opleiding en projecten.">
+    <title>Portfolio van Tim Bosma - Home</title>
+    <meta name="description" content="Welkom bij de portfolio van Tim Bosma. Hier vindt u informatie over mijn werkervaring, opleiding en projecten.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welkom bij deze portofolio</h1>
+        <h1>Welkom bij mijn portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,17 +20,18 @@
     </header>
 
     <main>
-        <section>
+        <section id="about">
             <h2>Over mij</h2>
             <article>
                 <p>Mijn naam is Tim Bosma en ik studeer softwareontwikkeling aan het Techniek College Rotterdam. Eerder heb ik mijn diploma behaald voor 'Medewerker ICT Support'.</p>
                 <p>Mijn vaardigheden omvatten HTML, CSS, Java en PHP.</p>
             </article>
         </section>
+        
     </main>
 
     <footer>
-        <p>&copy; 2024 portofolio.</p>
+        <p>&copy; 2024 Tim Bosma Portfolio.</p>
     </footer>
 </body>
 </html>
