--- a/projecten.html
+++ b/projecten.html
@@ -1,10 +1,9 @@
-<!-- projecten.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn Projecten - Portofolio van Tim Bosma</title>
+    <title>Mijn Projecten - Portfolio van Tim Bosma</title>
     <meta name="description" content="Bekijk de projecten waaraan Tim Bosma heeft gewerkt.">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,11 +20,11 @@
     </header>
 
     <main>
-        <section>
+        <section id="projects">
             <h2>Mijn Projecten</h2>
             <article>
                 <ul>
-                    <li><a href="https://github.com/TimBosma/Portofolio">Portofolio</a></li>
+                    <li><a href="https://github.com/TimBosma/Portofolio">Portfolio</a></li>
                     <li><a href="https://github.com/TimBosma/Project-Ouderavond-SOD1A">Project Ouderavond SOD1A</a></li>
                     <li><a href="https://github.com/TimBosma/P2-PHP">P2 PHP</a></li>
                     <li><a href="https://github.com/TimBosma/p2-Space-defender">P2 Space Defender</a></li>
@@ -36,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 portofolio.</p>
+        <p>&copy; 2024 Tim Bosma Portfolio.</p>
     </footer>
 </body>
 </html>
