--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Portfolio van Tim Bosma - Home</title>
     <meta name="description" content="Welkom bij de portfolio van Tim Bosma. Hier vindt u informatie over mijn werkervaring, opleiding en projecten.">
     <link rel="stylesheet" href="styles.css">
+    <!-- Voeg hier de gestructureerde gegevensmarkering toe -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Tim Bosma",
+      "jobTitle": "Softwareontwikkelaar",
+      "url": "https://www.example.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/timbosma",
+        "https://github.com/TimBosma"
+      ]
+    }
+    </script>
 </head>
 <body>
     <header>
