--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Portfolio van Tim Bosma - Home</title>
     <meta name="description" content="Welkom bij de portfolio van Tim Bosma. Hier vindt u informatie over mijn werkervaring, opleiding en projecten.">
     <link rel="stylesheet" href="styles.css">
+
+    <meta name="ahrefs-site-verification" content="b6a2da69088c6ad6f44d6f75eeffea92a323ec9962677e0aa7009b6ea0367cba">
+
     <!-- Voeg hier de gestructureerde gegevensmarkering toe -->
     <script type="application/ld+json">
     {
